--- a/2.html
+++ b/2.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
 <meta charset="UTF-8">
-<title>2017/11/11 高見・伊藤結婚式</title>
+<title>2017/11/11 高見・伊藤結婚式 挙式&披露宴</title>
 <meta name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=yes" />
 <link rel="stylesheet" type="text/css" href="./css/reset.css">
 <link rel="stylesheet" type="text/css" href="./css/main.css">
@@ -13,13 +13,21 @@
 
 <div id="header">
   <ul>
-    <li>HOME</li>
-    <li><a href="./2.html">挙式&披露宴</a></li>
+    <li><a href="./index.html">HOME</a></li>
+    <li>挙式&披露宴</li>
     <li><a href="./3.html">2次会</a></li>
   </ul>
 </div>
 
-<div><img src="./img/title.png" width="100%"></div>
+<div><img src="./img/2.png" width="100%"></div>
 
+<!--
+<div id="contents-header"><img src="./img/right.png"></div>
+<div id="contents">
+披露宴: ルアール東郷
+挙式: 東郷神社
+</div>
+<div id="contents-footer"><img src="./img/left.png"></div>
+-->
 </body>
 </html>
