--- a/3.html
+++ b/3.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
 <meta charset="UTF-8">
-<title>2017/11/11 高見・伊藤結婚式 挙式&披露宴</title>
+<title>2017/11/11 高見・伊藤結婚式 2次会</title>
 <meta name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=yes" />
 <link rel="stylesheet" type="text/css" href="./css/reset.css">
 <link rel="stylesheet" type="text/css" href="./css/main.css">
@@ -14,32 +14,33 @@
 <div id="header">
   <ul>
     <li><a href="./index.html">HOME</a></li>
-    <li>挙式&披露宴</li>
-    <li><a href="./3.html">2次会</a></li>
+    <li><a href="./2.html">挙式&披露宴</a></li>
+    <li>2次会</li>
   </ul>
 </div>
+
+<div id="contents">
 
 <div class="box4">
 <p>
 詳細
 <br>
 <br>
-挙式：東郷神社<br>
-披露宴：ルアール東郷<br>
+開宴時間：21時00分(受付20時30分〜)<br>
+閉宴時間：23時00分<br>
+場所：恵比寿ToothTooth<br>
+アクセスマップ：<a href="http://goo.gl/maps/QYt5m">URL</a><br>
 </p>
 </div>
 
 <div class="box4">
 <p>
-BGM PLAYLIST
+新郎新婦クイズ<br>
 <br>
-<br>
-披露宴中に流したBGMは、新郎新婦の思い出が詰まった選曲になっていたのでした！
-<br>
-<br>
-ほげ<br>
-ふが<br>
+回答は<a href="">こちら</a>から！
 </p>
+</div>
+
 </div>
 
 </body>
