--- a/index.html
+++ b/index.html
@@ -21,5 +21,11 @@
 
 <div><img src="./img/title.png" width="100%"></div>
 
+<div class="box1">
+<p>
+本日は私達の結婚式に参列いただき、誠にありがとうございます！
+</p>
+</div>
+
 </body>
 </html>
