--- a/index.html
+++ b/index.html
@@ -6,18 +6,8 @@
 <meta name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=yes" />
 <link rel="stylesheet" type="text/css" href="./css/reset.css">
 <link rel="stylesheet" type="text/css" href="./css/main.css">
-<script type="text/javascript" src="./js/jquery-3.2.1.min.js"></script>
-<script type="text/javascript" src="./js/main.js"></script>
 </head>
 <body>
-
-<div id="header">
-  <ul>
-    <li>HOME</li>
-    <li><a href="./2.html">挙式&披露宴</a></li>
-    <li><a href="./3.html">2次会</a></li>
-  </ul>
-</div>
 
 <div><img src="./img/title.png" width="100%"></div>
 
@@ -25,6 +15,29 @@
 <p>
 本日は私達の結婚式に参列いただき、誠にありがとうございます！
 </p>
+</div>
+
+<div id="menu">
+  <ul>
+    <li>
+      <a href="https://sukesan-itorie.weddingday.jp/">
+        二次会招待状
+      </a>
+      <p class="detail"> - 二次会会場へのアクセスや開宴時間はこちらから</p>
+    </li>
+    <li>
+      <a href="https://goo.gl/forms/KVUV65egBqapnfav2">
+        二次会新郎新婦クイズ
+      </a>
+      <p class="detail"> - 二次会余興の新郎新婦クイズの回答はこちらから</p>
+    </li>
+    <li>
+      <a href="./bgm.html">
+        披露宴BGM
+      </a>
+      <p class="detail"> - 披露宴で流したBGMプレイリスト</p>
+    </li>
+  </ul>
 </div>
 
 </body>
