--- a/bgm.html
+++ b/bgm.html
@@ -9,14 +9,214 @@
 </head>
 <body>
 
-<div><img src="./img/title.png" width="100%"></div>
+<div><a href="./index.html"><img src="./img/title.png" width="100%"></a></div>
 
-<div class="box1">
+<div id="header">
 <p>
-披露宴BGMプレイリスト
+披露宴メインBGM
 </p>
 </div>
 
+<div id="bgm">
+<ul>
+  <li class="jacket"><img src="./img/hotaru.jpg" width="67px"></li>
+  <li class="detail">
+    <p class="bgm-scene">1. 新郎新婦入場</p>
+    <p>ホタルノヒカリ - OPENING TITLE -(菅野祐悟)</p>
+    <p class="bgm-memory">ドラマ「ホタルノヒカリ」は私達の大好きなドラマです！ぶちょおー</p>
+  </li>
+</ul>
+<ul>
+  <li class="jacket"><img src="./img/FF9.jpg" width="67px"></li>
+  <li class="detail">
+    <p class="bgm-scene">2. 乾杯</p>
+    <p>ウクレ・le チョコボ(植松伸夫)</p>
+    <p class="bgm-memory">FF9サントラより。いつものチョコボのテーマよりのんびりしててかわいい</p>
+  </li>
+</ul>
+<ul>
+  <li class="jacket"><img src="./img/ozaken.jpg" width="67px"></li>
+  <li class="detail">
+    <p class="bgm-scene">3. ケーキカット</p>
+    <p>僕らが旅に出る理由(小沢健二)</p>
+    <p class="bgm-memory">結婚式なんで、オザケンですよね</p>
+  </li>
+</ul>
+<ul>
+  <li class="jacket"><img src="./img/glay.jpeg" width="67px"></li>
+  <li class="detail">
+    <p class="bgm-scene">4. 新婦中座</p>
+    <p>SOUL LOVE</p>
+    <p class="bgm-memory">GLAYは私の青春そのもの</p>
+  </li>
+</ul>
+<ul>
+  <li class="jacket"><img src="./img/home.jpg" width="67px"></li>
+  <li class="detail">
+    <p class="bgm-scene">5. 新郎中座</p>
+    <p>彩り(Mr.Children)</p>
+    <p class="bgm-memory">ミスチルファンクラブライブで整理番号20番だったのは一生の自慢</p>
+  </li>
+</ul>
+<ul>
+  <li class="jacket"><img src="./img/jsonmarz.jpg" width="67px"></li>
+  <li class="detail">
+    <p class="bgm-scene">6. 新郎新婦再入場</p>
+    <p>I'm Yours(JSON MARZ)</p>
+    <p class="bgm-memory">ap bank fes'12で聴いて、すっかりファンになりました</p>
+  </li>
+</ul>
+<ul>
+  <li class="jacket"><img src="./img/gift.jpg" width="67px"></li>
+  <li class="detail">
+    <p class="bgm-scene">7. 指輪交換</p>
+    <p>GIFT(Mr.Children)</p>
+    <p class="bgm-memory">指輪をお互いにギフト、ということで選びました</p>
+  </li>
+</ul>
+<ul>
+  <li class="jacket"><img src="./img/loveletter.jpg" width="67px"></li>
+  <li class="detail">
+    <p class="bgm-scene">8. 新婦手紙</p>
+    <p>A WINTER STORY(REMEDIOS)</p>
+    <p class="bgm-memory">映画「LOVE LETTER」より。岩井監督の作品で、やっぱり一番好き</p>
+  </li>
+</ul>
+<ul>
+  <li class="jacket"><img src="./img/ontime.jpg" width="67px"></li>
+  <li class="detail">
+    <p class="bgm-scene">9. 花束・記念品贈呈</p>
+    <p>家族の風景(ハナレグミ)</p>
+    <p class="bgm-memory">ハナレグミとフジファブリックの対バンライブ以来、すっかりファンになりました</p>
+  </li>
+</ul>
+<ul>
+  <li class="jacket"><img src="./img/bankband.jpg" width="67px"></li>
+  <li class="detail">
+    <p class="bgm-scene">10. 新郎新婦退場</p>
+    <p>若者のすべて(Bank Band)</p>
+    <p class="bgm-memory">新婦の好きなフジファブリックを、新郎の好きなミスチル桜井さんがカバー</p>
+  </li>
+</ul>
+<ul>
+  <li class="jacket"><img src="./img/baranohana.jpeg" width="67px"></li>
+  <li class="detail">
+    <p class="bgm-scene">11. エンドロール</p>
+    <p>ばらの花(くるり)</p>
+    <p class="bgm-memory">くるりの名曲だけど、フェスではなかなか歌ってくれない曲</p>
+  </li>
+</ul>
+</div>
+<div id="header">
+<p>
+プロフィールムービーBGM
+</p>
+</div>
+<div id="bgm">
+<ul>
+  <li class="jacket"><img src="./img/hanatoarisu.jpg" width="67px"></li>
+  <li class="detail">
+    <p class="bgm-scene">新郎パート</p>
+    <p>ループ&ループ(ASIAN KUNG-FU GENERATION)</p>
+    <p class="bgm-memory">ライブだとGotchがいつもカッコイイMCしててうっとりする</p>
+  </li>
+</ul>
+<ul>
+  <li class="jacket"><img src="./img/zeno.jpg" width="67px"></li>
+  <li class="detail">
+    <p class="bgm-scene">新婦パート</p>
+    <p>ツマサキ(チャットモンチー)</p>
+    <p class="bgm-memory">よくカラオケで歌います</p>
+  </li>
+</ul>
+<ul>
+  <li class="jacket"><img src="./img/bach.gif" width="67px"></li>
+  <li class="detail">
+    <p class="bgm-scene">2人パート</p>
+    <p>LIFE(フジファブリック)</p>
+    <p class="bgm-memory">新婦が追っかけしているバンドです</p>
+  </li>
+</ul>
+</div>
+<div id="header">
+<p>
+披露宴歓談中BGM
+</p>
+</div>
+<div id="bgm">
+<ul>
+  <li class="jacket"><img src="./img/hanatoarisu.jpg" width="67px"></li>
+  <li class="detail">
+    <p class="bgm-scene">開宴前</p>
+    <p>H&A "hana & alice" Original SoundTrack(shunji iwai)</p>
+    <p class="bgm-memory">岩井監督の花とアリスサウンドトラックより、かわいい曲何曲かチョイスしました</p>
+  </li>
+</ul>
+<ul>
+  <li class="jacket"><img src="./img/zeno.jpg" width="67px"></li>
+  <li class="detail">
+    <p class="bgm-scene">開宴前</p>
+    <p>ゼノギアス ― オリジナル・サウンドトラック(光田康典)</p>
+    <p class="bgm-memory">クロノトリガーでも有名な光田さん。名曲ぞろい！</p>
+  </li>
+</ul>
+<ul>
+  <li class="jacket"><img src="./img/bach.gif" width="67px"></li>
+  <li class="detail">
+    <p class="bgm-scene">開宴前</p>
+    <p>Bach Cello Suites(ムスティスラフ・ロストロポーヴィチ)</p>
+    <p class="bgm-memory">チェロで聴くバッハ</p>
+  </li>
+</ul>
+<ul>
+  <li class="jacket"><img src="./img/ayaka.jpg" width="67px"></li>
+  <li class="detail">
+    <p class="bgm-scene">歓談中</p>
+    <p>遊音倶楽部 〜1st grade〜(絢香)</p>
+    <p class="bgm-memory">J-POPの名曲を絢香がカバーした名アルバム！</p>
+  </li>
+</ul>
+<ul>
+  <li class="jacket"><img src="./img/hikoma.jpg" width="67px"></li>
+  <li class="detail">
+    <p class="bgm-scene">歓談中</p>
+    <p>彦馬がゆく オリジナル・サウンドトラック(服部隆之)</p>
+    <p class="bgm-memory">三谷幸喜の舞台、彦馬がゆくより</p>
+  </li>
+</ul>
+<ul>
+  <li class="jacket"><img src="./img/fuji.jpg" width="67px"></li>
+  <li class="detail">
+    <p class="bgm-scene">歓談中</p>
+    <p>フジファブリック SINGLES 2004-2009(フジファブリック)</p>
+    <p class="bgm-memory">初期の曲を集めたアルバム。志村さんの名曲ぞろいです！</p>
+  </li>
+</ul>
+<ul>
+  <li class="jacket"><img src="./img/sep.jpg" width="67px"></li>
+  <li class="detail">
+    <p class="bgm-scene">歓談中</p>
+    <p>セプテンバーさん(Aimer)</p>
+    <p class="bgm-memory">澤野音楽からAimerが好きになりました。RADWINPSのAIMERのカバー。</p>
+  </li>
+</ul>
+<ul>
+  <li class="jacket"><img src="./img/perfume.jpg" width="67px"></li>
+  <li class="detail">
+    <p class="bgm-scene">歓談中</p>
+    <p>baby clusing love(perfume)</p>
+    <p class="bgm-memory">映画「モテキ」で、我らがさいたま新都心で踊ってたやつですね</p>
+  </li>
+</ul>
+<ul>
+  <li class="jacket"><img src="./img/telephones.jpg" width="67px"></li>
+  <li class="detail">
+    <p class="bgm-scene">歓談中</p>
+    <p>Love & Disco(the telephones)</p>
+    <p class="bgm-memory">活動休止寂しい...DISCO</p>
+  </li>
+</ul>
+</div>
 
 </body>
 </html>
