--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <div><img src="./img/title.png" width="100%"></div>
 
-<div class="box1">
+<div id="header">
 <p>
 本日は私達の結婚式に参列いただき、誠にありがとうございます！
 </p>
