--- a/bgm.html
+++ b/bgm.html
@@ -114,7 +114,7 @@
 </div>
 <div id="bgm">
 <ul>
-  <li class="jacket"><img src="./img/hanatoarisu.jpg" width="67px"></li>
+  <li class="jacket"><img src="./img/loop.jpg" width="67px"></li>
   <li class="detail">
     <p class="bgm-scene">新郎パート</p>
     <p>ループ&ループ(ASIAN KUNG-FU GENERATION)</p>
@@ -122,7 +122,7 @@
   </li>
 </ul>
 <ul>
-  <li class="jacket"><img src="./img/zeno.jpg" width="67px"></li>
+  <li class="jacket"><img src="./img/chat.jpeg" width="67px"></li>
   <li class="detail">
     <p class="bgm-scene">新婦パート</p>
     <p>ツマサキ(チャットモンチー)</p>
@@ -130,7 +130,7 @@
   </li>
 </ul>
 <ul>
-  <li class="jacket"><img src="./img/bach.gif" width="67px"></li>
+  <li class="jacket"><img src="./img/life.jpg" width="67px"></li>
   <li class="detail">
     <p class="bgm-scene">2人パート</p>
     <p>LIFE(フジファブリック)</p>
