--- a/bgm.html
+++ b/bgm.html
@@ -55,7 +55,7 @@
   <li class="detail">
     <p class="bgm-scene">5. 新郎中座</p>
     <p>彩り(Mr.Children)</p>
-    <p class="bgm-memory">ミスチルファンクラブライブで整理番号20番だったのは一生の自慢</p>
+    <p class="bgm-memory">ミスチルファンクラブ限定ライブで整理番号20番だったのは一生の自慢。Zeppで最前はもうないだろうな。</p>
   </li>
 </ul>
 <ul>
@@ -157,7 +157,7 @@
   <li class="detail">
     <p class="bgm-scene">開宴前</p>
     <p>ゼノギアス ― オリジナル・サウンドトラック(光田康典)</p>
-    <p class="bgm-memory">クロノトリガーでも有名な光田さん。名曲ぞろい！</p>
+    <p class="bgm-memory">クロノトリガーでも有名な光田さん。名曲ぞろい！ゼノギアスは新郎がゲームより先にサントラを買いました。</p>
   </li>
 </ul>
 <ul>
@@ -165,7 +165,7 @@
   <li class="detail">
     <p class="bgm-scene">開宴前</p>
     <p>Bach Cello Suites(ムスティスラフ・ロストロポーヴィチ)</p>
-    <p class="bgm-memory">チェロで聴くバッハ</p>
+    <p class="bgm-memory">6番プレリュードは無伴奏の中でも一番好きで、無理やり先生に頼んでレッスンしてもらいました。超むずいんす</p>
   </li>
 </ul>
 <ul>
@@ -181,7 +181,7 @@
   <li class="detail">
     <p class="bgm-scene">歓談中</p>
     <p>彦馬がゆく オリジナル・サウンドトラック(服部隆之)</p>
-    <p class="bgm-memory">三谷幸喜の舞台、彦馬がゆくより</p>
+    <p class="bgm-memory">三谷幸喜の舞台、「彦馬がゆく」。三谷幸喜の舞台の面白さを知った作品です。「オケピ!」も好きです。</p>
   </li>
 </ul>
 <ul>
@@ -197,7 +197,7 @@
   <li class="detail">
     <p class="bgm-scene">歓談中</p>
     <p>セプテンバーさん(Aimer)</p>
-    <p class="bgm-memory">澤野音楽からAimerが好きになりました。RADWINPSのAIMERのカバー。</p>
+    <p class="bgm-memory">澤野音楽からAimerが好きになりました。RADWINPSのAIMERのカバー。新婦がきいていて、いつも「この曲なんだっけ？」と思うやつ。</p>
   </li>
 </ul>
 <ul>
@@ -213,7 +213,7 @@
   <li class="detail">
     <p class="bgm-scene">歓談中</p>
     <p>Love & Disco(the telephones)</p>
-    <p class="bgm-memory">活動休止寂しい...DISCO</p>
+    <p class="bgm-memory">活動休止寂しい...DISCO.新郎はHyper Jumpが好き</p>
   </li>
 </ul>
 </div>
