add youtube channel

--- a/index.html
+++ b/index.html
@@ -20,6 +20,12 @@
 <div id="menu">
   <ul>
     <li>
+      <a href="./bgm.html">
+        披露宴BGM
+      </a>
+      <p class="detail"> - 披露宴で流したBGMプレイリスト</p>
+    </li>
+    <li>
       <a href="https://sukesan-itorie.weddingday.jp/">
         二次会招待状
       </a>
@@ -32,10 +38,10 @@
       <p class="detail"> - 二次会余興の新郎新婦クイズの回答はこちらから</p>
     </li>
     <li>
-      <a href="./bgm.html">
-        披露宴BGM
+    <a href="https://www.youtube.com/user/Sukesan1984">
+        新郎のYoutube チャンネル
       </a>
-      <p class="detail"> - 披露宴で流したBGMプレイリスト</p>
+      <p class="detail"> - 小泉さんからも紹介あった新郎のYoutubeチャンネル(笑) </p>
     </li>
   </ul>
 </div>
