change bach img

--- a/bgm.html
+++ b/bgm.html
@@ -161,7 +161,7 @@
   </li>
 </ul>
 <ul>
-  <li class="jacket"><img src="./img/bach.gif" width="67px"></li>
+  <li class="jacket"><img src="./img/bach.jpg" width="67px"></li>
   <li class="detail">
     <p class="bgm-scene">開宴前</p>
     <p>Bach Cello Suites(ムスティスラフ・ロストロポーヴィチ)</p>
