--- a/index.html
+++ b/index.html
@@ -26,6 +26,12 @@
       <p class="detail"> - 披露宴で流したBGMプレイリスト</p>
     </li>
     <li>
+      <a href="./kentou.html">
+        打ち合わせで検討したものたち
+      </a>
+      <p class="detail"> - いろいろ検討したやつ</p>
+    </li>
+    <li>
       <a href="https://sukesan-itorie.weddingday.jp/">
         二次会招待状
       </a>
