--- a/kentou.html
+++ b/kentou.html
@@ -13,92 +13,96 @@
 
 <div id="header">
 <p>
-準備したグッズたち
+手作りしたもの
 </p>
 </div>
 
-<div id="bgm">
-    <div id="header">
-    <p>
-    手作りのもの
-    </p>
+<div id="kentou">
     <ul>
-        <li class="jacket"><img src="./img/kentou/ring_pillow.png" width="256px"</li>
+      <li class="jacket"><img src="./img/kentou/ring_pillow.png" width="256px"</li>
       <li class="detail">
-        <p class="bgm-scene">リングピロー</p>
+        <p class="kentou-scene">リングピロー</p>
         <p>リングピロー</p>
-        <p class="bgm-memory"></p>
+        <p class="kentou-memory"></p>
       </li>
     </ul>
     <ul>
         <li class="jacket"><img src="./img/kentou/welcome.JPG" width="256px"</li>
       <li class="detail">
-        <p class="bgm-scene">ウェルカムボード</p>
+        <p class="kentou-scene">ウェルカムボード</p>
         <p>ウェルカムボード</p>
-        <p class="bgm-memory">ウェルカムボード</p>
+        <p class="kentou-memory">ウェルカムボード</p>
       </li>
     </ul>
     <ul>
         <li class="jacket"><img src="./img/kentou/thankyou.jpg" width="256px"</li>
       <li class="detail">
-        <p class="bgm-scene">サンキューボード</p>
+        <p class="kentou-scene">サンキューボード</p>
         <p>サンキューボード</p>
-        <p class="bgm-memory">サンキューボード</p>
+        <p class="kentou-memory">サンキューボード</p>
       </li>
     </ul>
-    </div>
-    <div id="header">
-    <p>
-    借りたもの
+ </div>
+
+<div id="header">
+<p>
+借りたもの
+</p>
+</div>
+<div id="kentou">
     <ul>
-        <li class="jacket"><img src="./img/kentou/spoon.jpeg" width="256px"</li>
+      <li class="jacket"><img src="./img/kentou/spoon.jpeg" width="256px"</li>
       <li class="detail">
-        <p class="bgm-scene">スプーン</p>
+        <p class="kentou-scene">スプーン</p>
         <p>スプーん</p>
-        <p class="bgm-memory"></p>
+        <p class="kentou-memory"></p>
       </li>
     </ul>
-    </p>
-    </div>
     <ul>
-        <li class="jacket"><img src="./img/kentou/nashi.jpg" width="256px"</li>
+      <li class="jacket"><img src="./img/kentou/nashi.jpg" width="256px"</li>
       <li class="detail">
-        <p class="bgm-scene">にっこり梨のデザート</p>
+        <p class="kentou-scene">にっこり梨のデザート</p>
         <p>新婦親族が梨農家を営んでいて紹介したかった</p>
-        <p class="bgm-memory">すごく美味しく、素敵なデザートでインパクトも十分だったのですが、パティシエとシェフに考えていただけてなんとか使いたかったのですが、梨の数が合わず断念。小さなデザートを添えてもらう形に。</p>
+        <p class="kentou-memory">すごく美味しく、素敵なデザートでインパクトも十分だったのですが、パティシエとシェフに考えていただけてなんとか使いたかったのですが、梨の数が合わず断念。小さなデザートを添えてもらう形に。</p>
       </li>
     </ul>
+</div>
+<div id="header">
+<p>
+準備オフショット
+</p>
+</div>
+<div id="kentou">
     <ul>
         <li class="jacket"><img src="./img/kentou/katsura.jpg" width="256px"</li>
       <li class="detail">
-        <p class="bgm-scene">かつらの試着</p>
+        <p class="kentou-scene">かつらの試着</p>
         <p>かつら</p>
-        <p class="bgm-memory">新婦「似、似合わねぇ」</p>
+        <p class="kentou-memory">新婦「似、似合わねぇ」</p>
       </li>
     </ul>
     <ul>
-        <li class="jacket"><img src="./img/kentou/bgm.jpg" width="256px"</li>
+        <li class="jacket"><img src="./img/kentou/kentou.jpg" width="256px"</li>
       <li class="detail">
-        <p class="bgm-scene">BGMの打ち合わせ</p>
+        <p class="kentou-scene">BGMの打ち合わせ</p>
         <p>BGMは新婦がかなりのこだわりを見せ、入念に準備</p>
-        <p class="bgm-memory">披露宴BGMのセットリストを作ってウェブに載せる案を思いつく。</p>
+        <p class="kentou-memory">披露宴BGMのセットリストを作ってウェブに載せる案を思いつく。</p>
       </li>
     </ul>
     <ul>
         <li class="jacket"><img src="./img/kentou/candle.jpg" width="256px"</li>
       <li class="detail">
-        <p class="bgm-scene">最後まで難航したキャンドル</p>
+        <p class="kentou-scene">最後まで難航したキャンドル</p>
         <p>キャンドルの燃えている時間と吹き消すUXを検討</p>
-        <p class="bgm-memory">Creemaで発注したキャンドルを自宅で燃やしてみた。キャンドルビュッフェで選んでもらうのは楽しくて良いなと思うが、なかなかプログラムと合わず断念。結局キャンドル自体は机に飾ることに</p>
+        <p class="kentou-memory">Creemaで発注したキャンドルを自宅で燃やしてみた。キャンドルビュッフェで選んでもらうのは楽しくて良いなと思うが、なかなかプログラムと合わず断念。結局キャンドル自体は机に飾ることに</p>
       </li>
     </ul>
     <ul>
         <li class="jacket"><img src="./img/kentou/candle_buffet.png" width="256px"</li>
       <li class="detail">
-        <p class="bgm-scene">キャンドルビュッフェ用の切り絵</p>
+        <p class="kentou-scene">キャンドルビュッフェ用の切り絵</p>
         <p>新郎母が切り絵好きで切り絵で作ってくれた</p>
-        <p class="bgm-memory">結局使わなくなってしまったが、最終的にはサンキューボードという形で切り絵を披露できた。QRコード印刷に見えるかもですが、切ってあるんですよ。気になった方は<a href="https://www.mercari.com/jp/u/962524839/">mercariで</a></p>
+        <p class="kentou-memory">結局使わなくなってしまったが、最終的にはサンキューボードという形で切り絵を披露できた。QRコード印刷に見えるかもですが、切ってあるんですよ。気になった方は<a href="https://www.mercari.com/jp/u/962524839/">mercariで</a></p>
       </li>
     </ul>
-</div>
 </div>
