--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </li>
     <li>
       <a href="./kentou.html">
-        打ち合わせで検討したものたち
+        写真たち
       </a>
       <p class="detail"> - いろいろ検討したやつ</p>
     </li>
