--- a/kentou.html
+++ b/kentou.html
@@ -30,16 +30,16 @@
         <li class="jacket"><img src="./img/kentou/welcome.JPG" width="256px"</li>
       <li class="detail">
         <p class="kentou-scene">ウェルカムボード</p>
-        <p>ウェルカムボード</p>
-        <p class="kentou-memory">ウェルカムボード</p>
+        <p>新婦母の手作りのウェルカムボード</p>
+        <p class="bgm-memory"></p>
       </li>
     </ul>
     <ul>
         <li class="jacket"><img src="./img/kentou/thankyou.jpg" width="256px"</li>
       <li class="detail">
         <p class="kentou-scene">サンキューボード</p>
-        <p>サンキューボード</p>
-        <p class="kentou-memory">サンキューボード</p>
+        <p>新郎母が切り絵で作成したサンキューボード</p>
+        <p class="bgm-memory">QRコードの部分も紙を切ってできていて、ちゃんと嫁込めます。もともと席次のプロフィールにいろいろ載せたいが紙面に限りがあるのをどうしようと言っていて、だったらサイト作ってアクセスできるようにしたらええんちゃうか？ということでこの形に。</p>
       </li>
     </ul>
  </div>
@@ -82,7 +82,7 @@
       </li>
     </ul>
     <ul>
-        <li class="jacket"><img src="./img/kentou/kentou.jpg" width="256px"</li>
+        <li class="jacket"><img src="./img/kentou/bgm.jpg" width="256px"</li>
       <li class="detail">
         <p class="kentou-scene">BGMの打ち合わせ</p>
         <p>BGMは新婦がかなりのこだわりを見せ、入念に準備</p>
