--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
     </li>
     <li>
       <a href="./kentou.html">
-        写真たち
+        オフショット
       </a>
-      <p class="detail"> - いろいろ検討したやつ</p>
+      <p class="detail"> - オフショットを載せてます</p>
     </li>
     <li>
       <a href="https://sukesan-itorie.weddingday.jp/">
