--- a/kentou.html
+++ b/kentou.html
@@ -19,18 +19,10 @@
 
 <div id="kentou">
     <ul>
-      <li class="jacket"><img src="./img/kentou/ring_pillow.png" width="256px"</li>
-      <li class="detail">
-        <p class="kentou-scene">リングピロー</p>
-        <p>リングピロー</p>
-        <p class="kentou-memory"></p>
-      </li>
-    </ul>
-    <ul>
         <li class="jacket"><img src="./img/kentou/welcome.JPG" width="256px"</li>
       <li class="detail">
         <p class="kentou-scene">ウェルカムボード</p>
-        <p>新婦母の手作りのウェルカムボード</p>
+        <p>新婦母の手作りのトールペイントのウェルカムボード。披露宴の大分前から準備してくれていました。</p>
         <p class="bgm-memory"></p>
       </li>
     </ul>
@@ -40,6 +32,14 @@
         <p class="kentou-scene">サンキューボード</p>
         <p>新郎母が切り絵で作成したサンキューボード</p>
         <p class="bgm-memory">QRコードの部分も紙を切ってできていて、ちゃんと嫁込めます。もともと席次のプロフィールにいろいろ載せたいが紙面に限りがあるのをどうしようと言っていて、だったらサイト作ってアクセスできるようにしたらええんちゃうか？ということでこの形に。</p>
+      </li>
+    </ul>
+    <ul>
+      <li class="jacket"><img src="./img/kentou/ring_pillow.png" width="256px"</li>
+      <li class="detail">
+        <p class="kentou-scene">リングピロー</p>
+        <p>新婦母の手作りリングピロー。ドライフラワーがめちゃめちゃかわいいです！</p>
+        <p class="kentou-memory"></p>
       </li>
     </ul>
  </div>
@@ -54,7 +54,7 @@
       <li class="jacket"><img src="./img/kentou/spoon.jpeg" width="256px"</li>
       <li class="detail">
         <p class="kentou-scene">スプーン</p>
-        <p>スプーん</p>
+        <p>新婦友人春菜ちゃんからレンタル！同じく新婦友人の冨金原もレンタルしてました♪</p>
         <p class="kentou-memory"></p>
       </li>
     </ul>
