--- a/kentou.html
+++ b/kentou.html
@@ -19,26 +19,26 @@
 
 <div id="kentou">
     <ul>
-        <li class="jacket"><img src="./img/kentou/welcome.JPG" width="256px"</li>
+        <li class="jacket"><img src="./img/kentou/welcome_board.jpg" width="256px"</li>
       <li class="detail">
         <p class="kentou-scene">ウェルカムボード</p>
-        <p>新婦母の手作りのトールペイントのウェルカムボード。披露宴の大分前から準備してくれていました。</p>
-        <p class="bgm-memory"></p>
+        <p class="kentou-memory">新婦母の手作りのトールペイントのウェルカムボード。披露宴の大分前から準備してくれていました。</p>
+        <p class="kentou-memory"></p>
       </li>
     </ul>
     <ul>
         <li class="jacket"><img src="./img/kentou/thankyou.jpg" width="256px"</li>
       <li class="detail">
         <p class="kentou-scene">サンキューボード</p>
-        <p>新郎母が切り絵で作成したサンキューボード</p>
-        <p class="bgm-memory">QRコードの部分も紙を切ってできていて、ちゃんと嫁込めます。もともと席次のプロフィールにいろいろ載せたいが紙面に限りがあるのをどうしようと言っていて、だったらサイト作ってアクセスできるようにしたらええんちゃうか？ということでこの形に。</p>
+        <p class="kentou-memory">新郎母が切り絵で作成したサンキューボード</p>
+        <p class="kentou-memory">QRコードの部分も紙を切ってできていて、ちゃんと嫁込めます。もともと席次のプロフィールにいろいろ載せたいが紙面に限りがあるのをどうしようと言っていて、だったらサイト作ってアクセスできるようにしたらええんちゃうか？ということでこの形に。</p>
       </li>
     </ul>
     <ul>
       <li class="jacket"><img src="./img/kentou/ring_pillow.png" width="256px"</li>
       <li class="detail">
         <p class="kentou-scene">リングピロー</p>
-        <p>新婦母の手作りリングピロー。ドライフラワーがめちゃめちゃかわいいです！</p>
+        <p class="kentou-memory">新婦母の手作りリングピロー。ドライフラワーがめちゃめちゃかわいいです！</p>
         <p class="kentou-memory"></p>
       </li>
     </ul>
@@ -54,15 +54,15 @@
       <li class="jacket"><img src="./img/kentou/spoon.jpeg" width="256px"</li>
       <li class="detail">
         <p class="kentou-scene">スプーン</p>
-        <p>新婦友人春菜ちゃんからレンタル！同じく新婦友人の冨金原もレンタルしてました♪</p>
+        <p class="kentou-memory">新婦友人春菜ちゃんからレンタル！同じく新婦友人の冨金原もレンタルしてました♪</p>
         <p class="kentou-memory"></p>
       </li>
     </ul>
     <ul>
-      <li class="jacket"><img src="./img/kentou/nashi.jpg" width="256px"</li>
+      <li class="jacket"><img src="./img/kentou/nashi_desert.jpg" width="256px"</li>
       <li class="detail">
         <p class="kentou-scene">にっこり梨のデザート</p>
-        <p>新婦親族が梨農家を営んでいて紹介したかった</p>
+        <p class="kentou-memory">新婦親族が梨農家を営んでいて紹介したかった</p>
         <p class="kentou-memory">すごく美味しく、素敵なデザートでインパクトも十分だったのですが、パティシエとシェフに考えていただけてなんとか使いたかったのですが、梨の数が合わず断念。小さなデザートを添えてもらう形に。</p>
       </li>
     </ul>
@@ -74,26 +74,26 @@
 </div>
 <div id="kentou">
     <ul>
-        <li class="jacket"><img src="./img/kentou/katsura.jpg" width="256px"</li>
+        <li class="jacket"><img src="./img/kentou/katsura_test.jpg" width="256px"</li>
       <li class="detail">
         <p class="kentou-scene">かつらの試着</p>
-        <p>かつら</p>
+        <p class="kentou-memory">かつら</p>
         <p class="kentou-memory">新婦「似、似合わねぇ」</p>
       </li>
     </ul>
     <ul>
-        <li class="jacket"><img src="./img/kentou/bgm.jpg" width="256px"</li>
+        <li class="jacket"><img src="./img/kentou/bgm_kentou.jpg" width="256px"</li>
       <li class="detail">
         <p class="kentou-scene">BGMの打ち合わせ</p>
-        <p>BGMは新婦がかなりのこだわりを見せ、入念に準備</p>
+        <p class="kentou-memory">BGMは新婦がかなりのこだわりを見せ、入念に準備</p>
         <p class="kentou-memory">披露宴BGMのセットリストを作ってウェブに載せる案を思いつく。</p>
       </li>
     </ul>
     <ul>
-        <li class="jacket"><img src="./img/kentou/candle.jpg" width="256px"</li>
+        <li class="jacket"><img src="./img/kentou/candle_test.jpg" width="256px"</li>
       <li class="detail">
         <p class="kentou-scene">最後まで難航したキャンドル</p>
-        <p>キャンドルの燃えている時間と吹き消すUXを検討</p>
+        <p class="kentou-memory">キャンドルの燃えている時間と吹き消すUXを検討</p>
         <p class="kentou-memory">Creemaで発注したキャンドルを自宅で燃やしてみた。キャンドルビュッフェで選んでもらうのは楽しくて良いなと思うが、なかなかプログラムと合わず断念。結局キャンドル自体は机に飾ることに</p>
       </li>
     </ul>
@@ -101,7 +101,7 @@
         <li class="jacket"><img src="./img/kentou/candle_buffet.png" width="256px"</li>
       <li class="detail">
         <p class="kentou-scene">キャンドルビュッフェ用の切り絵</p>
-        <p>新郎母が切り絵好きで切り絵で作ってくれた</p>
+        <p class="kentou-memory">新郎母が切り絵好きで切り絵で作ってくれた</p>
         <p class="kentou-memory">結局使わなくなってしまったが、最終的にはサンキューボードという形で切り絵を披露できた。QRコード印刷に見えるかもですが、切ってあるんですよ。気になった方は<a href="https://www.mercari.com/jp/u/962524839/">mercariで</a></p>
       </li>
     </ul>
